fix: upgrade cui-java-parent to 1.4.1 (#96)
## Summary
- Upgrade `cui-java-parent` from 1.4.0 to 1.5.0, adapting to breaking
API changes
- Add Lombok `@Builder` stub class to `ConnectionMetadata` so the
generated builder is visible to the javadoc tool, replacing the
`maven.javadoc.failOnError=false` workaround
- Fix all javadoc warnings across modules (empty tags, unescaped HTML
entities, broken `@link` references)
- Remove 8 obsolete `cui-rewrite:disable CuiLoggerStandardsRecipe`
suppression comments from 5 files

## Test plan
- [x] Full `./mvnw clean verify -Ppre-commit` passes (all modules, zero
javadoc warnings)
- [x] `./mvnw clean verify -Pjavadoc` passes
- [x] No new TODO markers introduced by OpenRewrite after suppression
removal
- [ ] CI pipeline passes on GitHub

🤖 Generated with [Claude Code](https://claude.com/claude-code)

---------

Co-authored-by: Oliver Wolff <23139298+cuioss@users.noreply.github.com>
Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>